# Collaborative-Coding-Exam

./: .buildinfo  .gitignore  CITATION.cff  Dockerfile  Jan_page.html  Johan_page.html  LICENSE  Magnus_page.html  README.md  Solveig.html  about.html  christian.html  environment.yml  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.ipynb  test.py
.doctrees/: Jan_page.doctree  Johan_page.doctree  Magnus_page.doctree  Solveig.doctree  about.doctree  christian.doctree  index.doctree
.doctrees/autoapi/: index.doctree
.github/Individual_pages/: Magnus_page.md
.github/workflows/: build-image.yml  format.yml  test.yml
CollaborativeCoding/: createfolders.py  load_data.py  load_metric.py  load_model.py
CollaborativeCoding/dataloaders/: datasources.py  download.py  mnist_0_3.py  mnist_4_9.py  svhn.py  usps_0_6.py  uspsh5_7_9.py
CollaborativeCoding/metrics/: EntropyPred.py  F1.py  accuracy.py  precision.py  recall.py
CollaborativeCoding/models/: __init__.py  christian_model.py  jan_model.py  johan_model.py  magnus_model.py  (+1 more)
_sources/: Jan_page.md.txt  Johan_page.md.txt  Magnus_page.md.txt  about.md.txt  index.md.txt
autoapi/: index.html
doc/: Jan_page.md  Johan_page.md  Magnus_page.md  Solveig.md  christian.md  conf.py  index.md
docker/: Dockerfile  createdocker.sh  requirements.txt
tests/: test_createfolders.py  test_dataloaders.py  test_metrics.py  test_models.py  test_wrappers.py
utils/: __init__.py  arg_parser.py  createfolders.py  load_data.py  load_metric.py  load_model.py
(+106 files in other folders)
