[project]
name = "collaborative-coding-exam"
version = "0.1.0"
description = "Exam project in the collaborative coding course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "h5py>=3.12.1",
    "isort>=6.0.0",
    "jupyterlab>=4.3.5",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pip>=25.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "scalene>=1.5.51",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.4.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
[tool.isort]
profile = "black"
line_length = 88
